--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
-<script src="semantic/dist/semantic.min.js"></script>
+<!--<script src="semantic/dist/semantic.min.js"></script> -->
 </head>
 
 <body>
-
+<p>Maddy is awesome</p>
 </body>
 
 </html>
