--- a/examples/homepage.html
+++ b/examples/homepage.html
@@ -149,6 +149,7 @@
 <body>
 
 <!-- Following Menu -->
+  <!--
 <div class="ui large top fixed hidden menu">
   <div class="ui container">
     <a class="active item">Home</a>
@@ -164,9 +165,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Sidebar Menu -->
+  <!--
 <div class="ui vertical inverted sidebar menu">
   <a class="active item">Home</a>
   <a class="item">Work</a>
@@ -174,13 +176,13 @@
   <a class="item">Careers</a>
   <a class="item">Login</a>
   <a class="item">Signup</a>
-</div>
+</div> -->
 
 
 <!-- Page Contents -->
 <div class="pusher">
   <div class="ui inverted vertical masthead center aligned segment">
-
+  <!--
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
         <a class="toc item">
@@ -204,7 +206,7 @@
       <h2>Do whatever you want when you want to.</h2>
       <div class="ui huge primary button">Get Started <i class="right arrow icon"></i></div>
     </div>
-
+  -->
   </div>
 
   <div class="ui vertical stripe segment">
